# SpatioTemporalSegmentation

./: .gitignore  README.md  config.py  main.py  pyproject.toml
lib/: train.py
lib/datasets/: scannet.py
lib/datasets/preprocessing/: scannet.py
scripts/: train_scannet.sh
