[tool.poetry]
name = "spatiotemporalsegmentation"
version = "0.1.0"
description = ""
authors = ["Thomas Chaton <thomas.chaton.ai@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
torch = "^1.4.0"
MinkowskiEngine = "^0.4.2"
torchvision = "^0.5.0"
seaborn = "^0.10.0"
imageio = "^2.8.0"
matplotlib = "^3.2.1"
sklearn = "^0.0"
tensorflow-tensorboard = "^1.5.1"
tensorboardX = "^2.0"
plyfile = "^0.7.2"
pandas = "^1.0.3"
datetime = "^4.3"
tqdm = "^4.45.0"
open3d = "^0.9.0"
easydict = "^1.9"

[tool.poetry.dev-dependencies]
gpustat = "^0.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
